--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,64 @@
-numpy
-keras
-gym
-tensorflow
+absl-py==0.8.1
+argh==0.26.2
+astor==0.8.0
+atari-py==0.2.6
+autopep8==1.4.4
+cachetools==3.1.1
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.2.2
+configparser==4.0.2
+docker-pycreds==0.4.0
+future==0.18.2
+gast==0.2.2
+gitdb2==2.0.6
+GitPython==3.0.5
+google-auth==1.7.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+gql==0.1.0
+graphql-core==2.2.1
+grpcio==1.25.0
+gym==0.15.4
+h5py==2.10.0
+idna==2.8
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+Markdown==3.1.1
+numpy==1.17.4
+nvidia-ml-py3==7.352.0
+oauthlib==3.1.0
+opencv-python==4.1.1.26
+opt-einsum==3.1.0
+pathtools==0.1.2
+Pillow==6.2.1
+promise==2.2.1
+protobuf==3.10.0
+psutil==5.6.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycodestyle==2.5.0
+pyglet==1.3.2
+python-dateutil==2.8.1
+PyYAML==5.1.2
+requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
+Rx==1.6.1
+scipy==1.3.2
+sentry-sdk==0.13.2
+shortuuid==0.5.0
+six==1.13.0
+smmap2==2.0.5
+subprocess32==3.5.4
+tensorboard==2.0.1
+tensorflow==2.0.0
+tensorflow-estimator==2.0.1
+termcolor==1.1.0
+urllib3==1.25.7
+wandb==0.8.16
+watchdog==0.9.0
+Werkzeug==0.16.0
+wrapt==1.11.2
